# cpp2rust-demo

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  build.rs
.cargo/: config.toml
cpp2rust-ffi/: Cargo.toml
cpp2rust-ffi/hook/: Makefile  hook.cpp
cpp2rust-ffi/src/: ast_parser.rs  capture.rs  instantiation_tracker.rs  main.rs  types.rs
cpp2rust-ffi/src/extractor/: class_extractor.rs  enum_extractor.rs  function_extractor.rs  mod.rs
cpp2rust-ffi/src/generator/: hicc_codegen.rs  project_generator.rs
cpp2rust-ffi/src/postprocessor/: mod.rs  operator_handler.rs
cpp2rust-ffi/tests/: l1_golden_tests.rs  l2_compile_tests.rs  l3_run_tests.rs
cpp2rust-ffi/tests/common/: mod.rs
docs/: INTRODUCTION.md  WORKFLOW.md  changelog-archive.md  clang-ast.md  cpp-features.md  cpp2rust-demo与hicc能力全景.md  design.md  dev-plan.md  direct-vs-shim-binding.md  feature-matrix.md  future-plan.md  hicc-usage.md  rapidjson-support.md  usage-c2rust-demo.md  usage-hicc.md  特性支持全景图.md
examples/: README.md  generate-ast.sh
examples/026_template_specialization/rust_hicc/: Cargo.toml  build.rs
examples/026_template_specialization/rust_hicc/src/: lib.rs  lib_scaffold.rs  main.rs
examples/026_template_specialization/rust_hicc/tests/: smoke.rs
hook/: Makefile  hook.c  hook.cpp  hook_shim.rs
hook-wrapper/: Cargo.toml
references/: README.md
references/c2rust-demo/: .gitignore  Cargo.toml  README.md  cJSON-20260506.rar  cJSON-20260507.rar
references/c2rust-demo/.github/workflows/: validate-cjson.yml
references/c2rust-demo/hook/: hook.c
references/c2rust-demo/scripts/: validate-cjson.sh
references/c2rust-demo/src/: README.md  capture.rs  layout.rs  main.rs  selector.rs
references/c2rust-demo/src/split/: feature.rs  file.rs  merge.rs  mod.rs
references/c2rust-demo/tests/: integration.rs
references/c2rust-demo/tests/fixtures/simple/: Makefile
references/c2rust-demo/tests/fixtures/simple/src/: counter.c  math.c
references/hicc/: .gitignore  Cargo.toml  README.md
references/hicc/examples/datas/src/: main.rs
references/hicc/hicc/: Cargo.toml  README.md
references/hicc/hicc-autogen/: Cargo.toml  README.md
references/hicc/hicc-autogen/src/: class.rs  class_visitor.rs  function.rs  import_class.rs  import_lib.rs
references/hicc/hicc-build/: Cargo.toml  README.md
references/hicc/hicc-macros/: Cargo.toml  README.md
references/hicc/hicc-rs/: Cargo.toml  README.md
references/hicc/hicc-rs/examples/bounded_generics/: Cargo.toml
references/hicc/hicc-rs/examples/bounded_generics/src/: main.rs
references/hicc/hicc-rs/examples/bounded_params/: Cargo.toml
references/hicc/hicc-rs/examples/bounded_params/src/: main.rs
references/hicc/hicc-rs/examples/depth_lifetime/: Cargo.toml
references/hicc/hicc-rs/examples/depth_lifetime/src/: main.rs
references/hicc/hicc-rs/examples/export_lib/: Cargo.toml
references/hicc/hicc-rs/examples/export_lib/src/: main.rs
references/hicc/hicc-rs/examples/group_a/: Cargo.toml
references/hicc/hicc-rs/examples/group_a/src/: main.rs
references/hicc/hicc-rs/examples/group_b/: Cargo.toml
references/hicc/hicc-rs/examples/group_b/src/: main.rs
references/hicc/hicc-rs/examples/group_c/: Cargo.toml
references/hicc/hicc-rs/examples/group_c/src/: main.rs
references/hicc/hicc-rs/examples/group_d/: Cargo.toml
references/hicc/hicc-rs/examples/group_d/src/: main.rs
references/hicc/hicc-rs/examples/group_e/: Cargo.toml
references/hicc/hicc-rs/examples/group_e/src/: main.rs
references/hicc/hicc-rs/examples/lifetime_param/: Cargo.toml
references/hicc/hicc-rs/examples/lifetime_param/src/: main.rs
references/hicc/hicc-rs/examples/multi_param/: Cargo.toml
references/hicc/hicc-rs/examples/multi_param/src/: main.rs
references/hicc/hicc-rs/examples/multi_param_unused/: Cargo.toml
references/hicc/hicc-rs/examples/multi_param_unused/src/: err.expand  main.rs
references/hicc/hicc-rs/examples/option_demo/: Cargo.toml
references/hicc/hicc-rs/examples/option_demo/src/: main.rs
references/hicc/hicc-rs/examples/simple_demo/: Cargo.toml
references/hicc/hicc-rs/examples/simple_demo/src/: main.rs
references/hicc/hicc-rs/examples/where_clause/: Cargo.toml
references/hicc/hicc-rs/examples/where_clause/src/: main.rs
references/hicc/hicc-rs/macros/: Cargo.toml
references/hicc/hicc-rs/macros/docs/: design.md
references/hicc/hicc-rs/macros/src/: export_class.rs  export_lib.rs  export_pod.rs  lib.rs
references/hicc/hicc-rs/src/: cabi.rs  class.rs  depth.rs  lib.rs
references/hicc/hicc-rs/src/core/: any.rs  array.rs  mod.rs  option.rs  result.rs  slice.rs
references/hicc/hicc-rs/src/std/: boxed.rs
references/hicc/hicc-std/: README.md  build.rs
references/hicc/hicc/include/hicc/: types.hpp
references/hicc/hicc/src/: class.rs  generic.rs  lib.rs
scripts/: build_cpp_libs.ps1  build_cpp_libs.sh  ci_local.sh  dump_ast.sh  filter_ast.py  run_l3_local.ps1  run_l3_local.sh  validate-examples.sh  validate-rapidjson.sh  verify-rapidjson-ffi.sh
src/: ast.rs  ast_parser.rs  build_meta.rs  capture.rs  codegen.rs  error.rs  ffi_model.rs  instantiation_tracker.rs  ir.rs  layout.rs  lib.rs  main.rs  merge.rs  metrics.rs  parser.rs  selector.rs  typemap.rs  types.rs
tests/: _dump.rs  abseil_e2e_test.rs  auto_cli_test.rs  cli_tests.rs  cross_merge_tests.rs  dynamic_cast_gen_tests.rs  eigen_e2e_test.rs  fmt_e2e_test.rs  fmtlib_e2e_test.rs  gen_verify_e2e_test.rs  integration.rs  integration_test.rs  (+19 more)
(+1196 files in other folders)
