[package]
name = "cpp2rust-demo"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "C++ to Rust Safe FFI scaffolding generator — auto-generates hicc-based FFI bindings from C++ source via build capture (LD_PRELOAD on Linux/macOS, PATH wrapper on Windows) and libclang AST analysis"
build = "build.rs"
license = "MIT"
repository = "https://github.com/LuuuXXX/cpp2rust-demo"
homepage = "https://github.com/LuuuXXX/cpp2rust-demo"
readme = "README.md"
keywords = ["ffi", "cpp", "rust", "bindgen", "hicc"]
categories = ["development-tools", "external-ffi-bindings"]

[[bin]]
name = "cpp2rust-demo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clang = { version = "2", features = ["clang_10_0", "runtime"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dialoguer = "0.11"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
