[package]
name = "cpp2rust-ffi"
version = "0.1.0"
edition = "2021"
description = "C++ to Rust Safe FFI automated scaffolding tool (v5)"

[[bin]]
name = "cpp2rust-ffi"
path = "src/main.rs"

[dependencies]
clang = { version = "2", features = ["clang_3_9", "clang_5_0", "clang_7_0"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
