[package]
name = "template_specialization"
version = "0.1.0"
edition = "2021"

[lib]
name = "template_specialization"
path = "src/lib.rs"

[[bin]]
name = "template_specialization"
path = "src/main.rs"

[dependencies]
hicc = { version = "0.2" }

[build-dependencies]
cc = "1.0"
hicc-build = { version = "0.2" }